treat admin:admin as a normal user