@@ -54,7 +54,7 @@
                                 <phase>integration-test</phase>
                                 <configuration>
                                     <argLine>
-                                        -XX:MaxPermSize=256m
+                                        ${maxpermsize}
                                         ${argLine}
                                     </argLine>
                                     <skip>false</skip>
@@ -75,6 +75,9 @@
                             <webAppConfig>
                                 <extraClasspath>${env.HADOOP_HOME}/etc/hadoop;${env.JAVA_HOME}/lib/tools.jar</extraClasspath>
                             </webAppConfig>
+                            <useTestClasspath>true</useTestClasspath>
+                            <webXml>${basedir}/src/test/webapp/WEB-INF/web.xml</webXml>
+                            <webAppSourceDirectory>${basedir}/src/test/webapp</webAppSourceDirectory>
                         </configuration>
                         <dependencies>
                             <dependency>
@@ -88,16 +91,6 @@
                                 <version>5.0.2</version>
                             </dependency>
                         </dependencies>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.eclipse.jetty</groupId>
-                        <artifactId>jetty-maven-plugin</artifactId>
-                        <version>${jetty.version}</version>
-                        <configuration>
-                            <useTestClasspath>true</useTestClasspath>
-                            <webXml>${basedir}/src/test/webapp/WEB-INF/web.xml</webXml>
-                            <webAppSourceDirectory>${basedir}/src/test/webapp</webAppSourceDirectory>
-                        </configuration>
                     </plugin>
                 </plugins>
             </build>
